# ai-news-aggregator

./: .env.example  .gitignore  README.md  pyproject.toml  run_pipeline.py
app/: config.py
app/database/: __init__.py  base.py  create_tables.py  repository.py  session.py
app/database/models/: __init__.py  article.py  youtube_video.py
app/database/repositories/: __init__.py  article_repository.py  base_repository.py  youtube_repository.py
app/scrapers/: base_scraper.py  blog_scraper.py  youtube_scraper.py
docker/: docker-compose.yml
tests/: test_blog_scraper.py  test_database.py  test_scrapers.py
